Fix to prevent inner border from shifting when opening context menus

--- a/RoundWindowCorners.css
+++ b/RoundWindowCorners.css
@@ -8,15 +8,15 @@
     background: transparent;
     background-color: transparent;
 }
+/* inner border */
 .appMount_ea7e65:before { 
     content: "";
-    position: absolute;
-    top: -1px;
-    left: -1px;
-    right: -1px;
-    bottom: -1px;
+    position: fixed;
+    box-sizing: border-box;
+    width: calc(100% - 2px);
+    height: calc(100% - 2px);
     border-radius: 14px;
-    border: 2px solid rgba(235, 235, 245, .25);
+    border: 1px solid rgba(235, 235, 245, .25);
     background-color: transparent;
     pointer-events: none;
     z-index: 99999; /* Ensure the border appears above the other */
